Sonarlint and WebSecurityConfig class update with depreciated removal